# expert-panel-assistant

./: .env_example  .gitignore  LLM_CONFIGURATION.md  README.md  commit_llm_changes.sh  panel_response_run1.md  panel_response_run2.md  pyproject.toml  test_llm_config.py
src/expert_panel_assistant/: crew.py  main.py
src/expert_panel_assistant/config/: agents.yaml  tasks.yaml
